--- a/core/src/main/res/values-w400dp/dimens.xml
+++ b/core/src/main/res/values-w400dp/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="main_calculator_button_maximum_text_size">100sp</dimen>
     <dimen name="main_calculator_button_minimum_text_size">8sp</dimen>
     <dimen name="main_calculator_buttons_text_auto_size_step_granularity">2sp</dimen>
+    <dimen name="calculator_display_memory_sign_size">24sp</dimen>
+    <dimen name="calculator_display_margin">10dp</dimen>
+    <dimen name="input_and_result_text_auto_size_step_granularity">6dp</dimen>
 </resources>
