Тексты названия кнопок калькулятора убраны в ресурсы.

--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/calculator_display_margin"
                 android:layout_marginStart="@dimen/calculator_display_margin"
-                android:text="M"
+                android:text="@string/calculator_display_memory_sign"
                 android:textSize="@dimen/calculator_display_memory_sign_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/percent_7_guideline"
@@ -104,7 +104,7 @@
                 android:gravity="end|bottom"
                 android:includeFontPadding="false"
                 android:maxLines="1"
-                android:text="1234567890123456  +  1234  +"
+                tools:text="1234567890123456  +  1234  +"
                 android:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/input_and_result_text_view"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
                 android:includeFontPadding="false"
                 android:maxLength="16"
                 android:maxLines="1"
-                android:text="123456789012"
+                tools:text="123456789012"
                 android:autoSizeTextType="uniform"
                 android:autoSizeStepGranularity="@dimen/input_and_result_text_auto_size_step_granularity"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -160,7 +160,7 @@
             android:autoSizeTextType="uniform"
             android:background="@drawable/main_calculator_shadowed_button"
             android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
-            android:text="MC"
+            android:text="@string/mc_button_text"
             app:layout_constraintBottom_toTopOf="@id/button27"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button23"
@@ -173,7 +173,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_shadowed_button"
-            android:text="MR"
+            android:text="@string/mr_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -195,7 +195,8 @@
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
             android:autoSizeTextType="uniform"
-            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"            android:text="MS"
+            android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"           
+            android:text="@string/ms_button_text"
             app:layout_constraintBottom_toBottomOf="@+id/button23"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button25"
@@ -213,7 +214,7 @@
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
             android:autoSizeTextType="uniform"
             android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
-            android:text="M+"
+            android:text="@string/m_plus_button_text"
             app:layout_constraintBottom_toBottomOf="@+id/button24"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toStartOf="@+id/button26"
@@ -231,7 +232,7 @@
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
             android:autoSizeTextType="uniform"
             android:paddingVertical="@dimen/main_calculator_operation_buttons_padding"
-            android:text="M-"
+            android:text="@string/m_minus_button_text"
             app:layout_constraintBottom_toBottomOf="@+id/button25"
             app:layout_constraintDimensionRatio="w,10:8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -260,7 +261,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="CE"
+            android:text="@string/ce_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -278,7 +279,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="C"
+            android:text="@string/c_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -296,7 +297,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="+-"
+            android:text="@string/plus_minus_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -314,7 +315,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="v"
+            android:text="@string/sqrt__button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -334,7 +335,7 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="7"
+            android:text="@string/seven_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -352,7 +353,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="8"
+            android:text="@string/eight_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -370,7 +371,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="9"
+            android:text="@string/nine_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -388,7 +389,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="/"
+            android:text="@string/divide_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -406,7 +407,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="%"
+            android:text="@string/percent_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -426,7 +427,7 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="4"
+            android:text="@string/four_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -444,7 +445,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="5"
+            android:text="@string/five_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -462,7 +463,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="6"
+            android:text="@string/six_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -480,7 +481,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="*"
+            android:text="@string/multiply_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -498,7 +499,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="1/x"
+            android:text="@string/inverse_ratio_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -518,7 +519,7 @@
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="1"
+            android:text="@string/one_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -535,7 +536,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="2"
+            android:text="@string/two_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -553,7 +554,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="3"
+            android:text="@string/three_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -571,7 +572,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="-"
+            android:text="@string/minus_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -590,7 +591,7 @@
             android:layout_marginStart="@dimen/calculator_space_between_buttons_half_size"
             android:layout_marginEnd="@dimen/calculator_space_between_buttons_half_size"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="="
+            android:text="@string/equal_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -607,7 +608,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/calculator_space_between_buttons_size"
             android:background="@drawable/main_calculator_light_button"
-            android:text="0"
+            android:text="@string/zero_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -623,7 +624,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/main_calculator_light_button"
-            android:text=","
+            android:text="@string/comma_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
@@ -639,7 +640,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/main_calculator_dark_button"
-            android:text="+"
+            android:text="@string/plus_button_text"
             android:autoSizeMaxTextSize="@dimen/main_calculator_button_maximum_text_size"
             android:autoSizeMinTextSize="@dimen/main_calculator_button_minimum_text_size"
             android:autoSizeStepGranularity="@dimen/main_calculator_buttons_text_auto_size_step_granularity"
