Добавлена библиотека для использования вью модели, создана StandardCalculatorViewModel для взаимодействи между Fragment-ом и репозиторием.

--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StandardCalculatorScreen">
+    tools:context=".presentation.view.StandardCalculatorScreen">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/menu_constraint_layout"
