--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -26,4 +26,14 @@
         <item name="cornerRadius">122dp</item>
     </style>
 
+    <!-- Menu style -->
+    <style name="calculatorTopMenuStyle" parent="Widget.Material3.PopupMenu">
+        <item name="android:popupBackground">@color/calculator_menu_background</item>
+    </style>
+
+    <style name="popUpMenuTextAppearanceLarge" parent="@android:style/TextAppearance.DeviceDefault.Widget.PopupMenu.Large">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/calculator_menu_item_text_size</item>
+    </style>
+
 </resources>
