Доделано меню калькулятора в части вызова подпунктов меню при нажатии на любой из пунктов меню.

--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="calculator_menu_stroke">#FFB6BCCC</color>
     <color name="calculator_menu_background">#FFF0F0F0</color>
     <color name="calculator_buttons_stroke">#FF8797AA</color>
+    <color name="calculator_menu_clicked_item_background_color">#B0C8CAD0</color>
+    <color name="calculator_menu_clicked_item_stroke_color">#FF404247</color>
     <color name="shadowed_buttons_background">#FFD5E0ED</color>
 </resources>
