--- a/core/src/main/res/menu/edit_popup_menu.xml
+++ b/core/src/main/res/menu/edit_popup_menu.xml
@@ -3,10 +3,12 @@
 
     <item
         android:id="@+id/copy_menu_item"
+        android:icon="@drawable/blank_icon"
         android:title="@string/menu_item_copy_text"/>
 
     <item
         android:id="@+id/paste_menu_item"
+        android:icon="@drawable/blank_icon"
         android:title="@string/menu_item_paste_text"/>
 
 </menu>
