--- a/core/src/main/res/menu/help_popup_menu.xml
+++ b/core/src/main/res/menu/help_popup_menu.xml
@@ -3,10 +3,12 @@
 
     <item
         android:id="@+id/read_help_menu_item"
+        android:icon="@drawable/blank_icon"
         android:title="@string/menu_item_read_help_text"/>
 
     <item
         android:id="@+id/about_menu_item"
+        android:icon="@drawable/blank_icon"
         android:title="@string/menu_item_about_app_text"/>
 
 </menu>
