--- a/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
+++ b/standard/src/main/res/layout/fragment_standard_calculator_screen.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/menu_item_text_vertical_margin"
             android:layout_marginStart="@dimen/main_calculator_horizontal_margin"
+            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_view_item_text"
             android:textSize="@dimen/calculator_menu_item_text_size"
             android:textStyle="bold"
@@ -32,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/calculator_menu_space_between_items_text"
+            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_edit_item_text"
             android:textSize="@dimen/calculator_menu_item_text_size"
             android:textStyle="bold"
@@ -44,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/calculator_menu_space_between_items_text"
+            android:paddingHorizontal="@dimen/calculator_menu_text_view_horizontal_padding_size"
             android:text="@string/calculator_menu_help_item_text"
             android:textStyle="bold"
             android:textSize="@dimen/calculator_menu_item_text_size"
