--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 
     <!-- Buttons styles-->
@@ -18,6 +18,70 @@
 
     <style name="main_calculator_unactive_button" parent="Widget.Material3.Button.OutlinedButton">
 
+    </style>
+
+    <style name="main_calculator_base_button_style" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginStart">@dimen/calculator_space_between_buttons_half_size</item>
+        <item name="android:layout_marginTop">@dimen/calculator_space_between_buttons_size</item>
+        <item name="android:layout_marginEnd">@dimen/calculator_space_between_buttons_half_size</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="autoSizeMaxTextSize">@dimen/main_calculator_button_maximum_text_size</item>
+        <item name="autoSizeMinTextSize">@dimen/main_calculator_button_minimum_text_size</item>
+        <item name="android:autoSizeStepGranularity" tools:targetApi="o">@dimen/main_calculator_buttons_text_auto_size_step_granularity</item>
+        <item name="autoSizeTextType">uniform</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="main_calculator_shadowed_button_style" parent="main_calculator_shadowed_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_dark_button_style" parent="main_calculator_dark_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_light_button_style" parent="main_calculator_light_edge_button_style">
+        <item name="android:layout_margin">@dimen/calculator_space_between_buttons_half_size</item>
+    </style>
+
+    <style name="main_calculator_shadowed_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_shadowed_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_operation_buttons_padding</item>
+    </style>
+
+    <style name="main_calculator_dark_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_dark_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_operation_buttons_padding</item>
+    </style>
+
+    <style name="main_calculator_light_edge_button_style" parent="main_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_light_button</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_digit_buttons_padding</item>
+    </style>
+
+    <style name="scientific_calculator_base_button_style" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="autoSizeMaxTextSize">@dimen/main_calculator_button_maximum_text_size</item>
+        <item name="autoSizeMinTextSize">@dimen/main_calculator_button_minimum_text_size</item>
+        <item name="android:autoSizeStepGranularity" tools:targetApi="o">@dimen/main_calculator_buttons_text_auto_size_step_granularity</item>
+        <item name="android:autoSizeTextType" tools:targetApi="o">uniform</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/main_calculator_operation_buttons_padding</item>
+        <item name="layout_constraintDimensionRatio">w,10:8</item>
+    </style>
+
+    <style name="scientific_calculator_shadowed_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_shadowed_button</item>
+    </style>
+
+    <style name="scientific_calculator_dark_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_dark_button</item>
+    </style>
+
+    <style name="scientific_calculator_light_button_style" parent="scientific_calculator_base_button_style">
+        <item name="android:background">@drawable/main_calculator_light_button</item>
     </style>
 
     <!-- Shape styles -->
